[ar] Increment line height on titles for Arabic language

--- a/media/css/l10n/ar/intl.css
+++ b/media/css/l10n/ar/intl.css
@@ -21,3 +21,15 @@
 * {
   letter-spacing: normal !important;
 }
+/* Fixes line height for all the headers */
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6,  
+.huge, 
+.large, 
+legend {  
+  line-height: 1.5 !important;
+}
