Bug 1110966 - EOY fundraising home page takeover

--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -7,9 +7,9 @@
 
 @font-face {
     font-family: 'FA-Icons-Home';
-    src: url('/media/fonts/icons-home.eot?v4.01#iefix') format('embedded-opentype'),
-         url('/media/fonts/icons-home.woff?v4.01') format('woff'),
-         url('/media/fonts/icons-home.ttf?v4.01') format('truetype');
+    src: url('/media/fonts/icons-home.eot?12-2014#iefix') format('embedded-opentype'),
+         url('/media/fonts/icons-home.woff?12-2014') format('woff'),
+         url('/media/fonts/icons-home.ttf?12-2014') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -270,16 +270,16 @@ h1, h2, h3, h4, h5, h6 {
                 }
 
                 &.organizations:before {
-                    content: '\f004';
+                    content: '\f004'; // heart
                 }
 
                 &.contributors:before {
                     height: 49px;
-                    content: '\f0c0';
+                    content: '\f0c0'; // group
                 }
 
                 &.countries:before {
-                    content: '\f0ac';
+                    content: '\f0ac'; // globe
                     left: 10px;
                 }
             }
@@ -405,7 +405,7 @@ h1, h2, h3, h4, h5, h6 {
             position: absolute;
             top: 0;
             left: 0;
-            content: '\f041\00a0';
+            content: '\f041\00a0'; // pin space
         }
 
         p {
@@ -415,7 +415,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     time.event-info:before {
-        content: '\f073\00a0';
+        content: '\f073\00a0'; // calendar space
     }
 
     .featured-event {
@@ -812,7 +812,7 @@ h1, h2, h3, h4, h5, h6 {
 
     &:before {
         font-family: 'FA-Icons-Home';
-        content: '\f055\00a0';
+        content: '\f055\00a0'; // plus-circle space
     }
 }
 
