--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -83,7 +83,6 @@
 {% endblock %}
 
 {% block content %}
-
 <main role="main">
   <header class="main-header">
     <div class="container">
@@ -334,6 +333,34 @@
 
   <button id="scroll-prompt">{{ _('Discover more') }}</button>
 </main>
+
+{% if waffle.switch('fundraiser-home-takeover') and LANG.startswith('en-') %}
+  <article id="fundraiser-splash">
+    <div class="container">
+      <h2 class="main-title">Your Gift Helps</h2>
+      <h3 class="sub-title">People everywhere are helping us build the Internet the world needs — an Internet where the public good comes first.</h3>
+      <form id="fundraiser-form" method="get" action="{{ donate_url('mozillaorg_takeover') }}#amount-35">
+        <fieldset>
+          <p>
+            <label for="donate35">
+              <input type="radio" value="35" id="donate35" name="amount" checked> $35
+            </label>
+            <label for="donate25">
+              <input type="radio" value="25" id="donate25" name="amount"> $25
+            </label>
+            <label for="donate15">
+              <input type="radio" value="15" id="donate15" name="amount"> $15
+            </label>
+          </p>
+          <p><button class="submit" type="submit">Donate Now</button></p>
+        </fieldset>
+      </form>
+
+    </div>
+    <button class="close" type="button">Continue to mozilla.org</button>
+  </article>
+  <div id="page-overlay"></div>
+{% endif %}
 
 {% endblock %}
 
