--- a/media/css/firefox/channel.less
+++ b/media/css/firefox/channel.less
@@ -81,12 +81,12 @@
 .pager-selected-beta #aurora-link  { left: 110px; z-index: 1; }
 .pager-selected-beta #firefox-link { left: 635px; z-index: 2; }
 
-.pager-selected-aurora #firefox-link { left: 110px; z-index: 1; }
-.pager-selected-aurora #beta-link    { left: 635px; z-index: 2; }
+.pager-selected-developer #firefox-link { left: 110px; z-index: 1; }
+.pager-selected-developer #beta-link    { left: 635px; z-index: 2; }
 
 .pager-selected-firefox #firefox-link,
 .pager-selected-beta    #beta-link,
-.pager-selected-aurora  #aurora-link {
+.pager-selected-developer  #aurora-link {
     top: 0;
     left: 335px;
     z-index: 3;
@@ -94,26 +94,26 @@
 
 .pager-selected-firefox #firefox-link a:hover,
 .pager-selected-beta    #beta-link    a:hover,
-.pager-selected-aurora  #aurora-link  a:hover {
+.pager-selected-developer  #aurora-link  a:hover {
     top: 0;
 }
 
 /* To override default image styles */
 
 .pager-selected-firefox #beta-link,
-.pager-selected-aurora  #beta-link {
+.pager-selected-developer  #beta-link {
     top: 25px;
 }
 
 .pager-selected-firefox #beta-link img,
-.pager-selected-aurora  #beta-link img {
+.pager-selected-developer  #beta-link img {
     width: 150px;
     height: 150px;
 }
 
 .pager-selected-firefox #firefox-link img,
 .pager-selected-beta    #beta-link img,
-.pager-selected-aurora  #aurora-link img {
+.pager-selected-developer  #aurora-link img {
     height: 225px;
     width: 225px;
 }
