--- a/media/css/firefox/os/get_device.less
+++ b/media/css/firefox/os/get_device.less
@@ -165,6 +165,9 @@
     .megafon {
         background: transparent url('/media/img/firefox/os/logo/megafon.png') top center no-repeat;
     }
+    .au {
+        background: transparent url('/media/img/firefox/os/logo/au.png') top center no-repeat;
+    }
     .last {
         border-right: none;
     }
