Update Fx0 device name & operator display.
Bugs 1115612 & 1115615.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -133,16 +133,14 @@
             <li><a class="zen" href="http://www.homeshop18.com/zen-fire-fox-phone-u105/mobiles/mobile-phones/product:32873765/cid:3027/">Zen 105 Fire</a></li>
           </ul>
         </div>
-      {% if waffle.switch('lg-fx0-available') %}
         <div class="provider" data-country="jp">
           <h3>{{ _('Japan') }}</h3>
           <ul>
             <li>
-              <a class="au" href="http://au-fx.kddi.com/products/">LG Fx0</a>
+              <a class="au" href="http://au-fx.kddi.com/products/">au Fx0</a>
             </li>
           </ul>
         </div>
-      {% endif %}
         <div class="provider" data-country="lu">
           <h3>{{_('Luxembourg')}}</h3>
           <ul>
