--- a/media/css/firefox/os/devices.less
+++ b/media/css/firefox/os/devices.less
@@ -142,6 +142,10 @@ html, body {
             display: block;
         }
 
+        .raw-format {
+            text-transform: none;
+        }
+
         &:hover,
         &.selected {
             text-decoration: none;
