--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -56,9 +56,7 @@
           <option value="hu">{{ _('Hungary') }}</option>
           <option value="in">{{ _('India') }}</option>
           <option value="it">{{ _('Italy') }}</option>
-        {% if waffle.switch('lg-fx0-available') %}
           <option value="jp">{{ _('Japan') }}</option>
-        {% endif %}
           <option value="lu">{{ _('Luxembourg') }}</option>
           <option value="mk">{{ _('Macedonia') }}</option>
           <option value="me">{{ _('Montenegro') }}</option>
@@ -1848,17 +1846,15 @@
               </div>
             </a>
           </li>
-        {% if waffle.switch('lg-fx0-available') %}
           <li class="last">
-            <a href="#lg_fx0" class="device-thumbnail">
-              <img src="{{ media('/img/firefox/os/devices/smartphones/lg-fx0-thumb.png') }}" alt="">
-              <span class="device-name">{{ _('LG Fx0') }}</span>
+            <a href="#au_fx0" class="device-thumbnail">
+              <img src="{{ media('/img/firefox/os/devices/smartphones/au-fx0-thumb.png') }}" alt="">
+              <span class="device-name raw-format">{{ _('Fx0') }}</span>
               <div class="availability-notice">
                 <span class="is-available">{{ _('Available') }}</span>
               </div>
             </a>
           </li>
-        {% endif %}
         </ul>
       </div>
 
@@ -2100,11 +2096,10 @@
           </div>{#--/.container--#}
         </section>{#--/#cherrymobile_ace--#}
 
-      {% if waffle.switch('lg-fx0-available') %}
-        <section class="device-detail smartphone-detail" id="lg_fx0">
-          <div id="lg_fx0-pager" class="container pager pager-with-tabs pager-no-history">
+        <section class="device-detail smartphone-detail" id="au_fx0">
+          <div id="au_fx0-pager" class="container pager pager-with-tabs pager-no-history">
             <header class="device-detail-header">
-              <h3 class="device-title">{{ _('LG Fx0') }}</h3>
+              <h3 class="device-title">{{ _('au Fx0') }}</h3>
 
               <ul class="pager-tabs">
                 <li><a href="#p1" data-label="Features">{{_('Features')}}</a></li>
@@ -2115,12 +2110,12 @@
             </header>
 
             <div class="pager-content">
-              <div class="device-details features pager-page default-page" id="lg_fx0-features">
+              <div class="device-details features pager-page default-page" id="au_fx0-features">
                 <div class="feature-group logo-colors">
                 </div>
 
                 <div class="feature-group image">
-                  <img src="{{ media('/img/firefox/os/devices/smartphones/lg-fx0.png') }}" alt="{{ _('LG Fx0') }}">
+                  <img src="{{ media('/img/firefox/os/devices/smartphones/au-fx0.png') }}" alt="{{ _('au Fx0') }}">
                 </div>
 
                 <div class="feature-group stats">
@@ -2149,14 +2144,14 @@
                     <li>{{ _('Japan') }}</li>
                   </ul>
 
-                  <h5>{{ _('Brand') }}</h5>
+                  <h5>{{ _('Operator') }}</h5>
 
                   <ul class="comma-list">
-                    <li>{{ _('LG') }}</li>
+                    <li>{{ _('KDDI') }}</li>
                   </ul>
                 </div>
               </div>{#--/.features--#}
-              <div class="device-details specifications pager-page" id="lg_fx0-specifications">
+              <div class="device-details specifications pager-page" id="au_fx0-specifications">
                 <h4 class="device-details-title">{{ _('Specifications') }}</h4>
 
                 <table>
@@ -2222,8 +2217,7 @@
               </div>{#--/.specifications--#}
             </div>{#--/.pager-content--#}
           </div>{#--/.container--#}
-        </section>{#--/#lg_fx0--#}
-      {% endif %}
+        </section>{#--/#au_fx0--#}
       </div>{#--/.device-detail-list--#}
     </section>{#--/#smartphones--#}
 
