--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -339,20 +339,20 @@
     <div class="container">
       <h2 class="main-title">Your Gift Helps</h2>
       <h3 class="sub-title">People everywhere are helping us build the Internet the world needs — an Internet where the public good comes first.</h3>
-      <form id="fundraiser-form" method="get" action="{{ donate_url('mozillaorg_takeover') }}#amount-35">
+      <form id="fundraiser-form" method="get" action="#">
         <fieldset>
           <p>
             <label for="donate35">
-              <input type="radio" value="35" id="donate35" name="amount" checked> $35
+              <input type="radio" value="35" id="donate35" name="amount" tabindex="1" checked> $35
             </label>
             <label for="donate25">
-              <input type="radio" value="25" id="donate25" name="amount"> $25
+              <input type="radio" value="25" id="donate25" name="amount" tabindex="1"> $25
             </label>
             <label for="donate15">
-              <input type="radio" value="15" id="donate15" name="amount"> $15
+              <input type="radio" value="15" id="donate15" name="amount" tabindex="1"> $15
             </label>
           </p>
-          <p><button class="submit" type="submit">Donate Now</button></p>
+          <p><a href="{{ donate_url('mozillaorg_takeover') }}#amount-35" id="donate-link" class="submit" tabindex="2">Donate Now</a></p>
         </fieldset>
       </form>
 
