--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -7,9 +7,9 @@
 
 @font-face {
     font-family: 'FA-Icons-Home';
-    src: url('/media/fonts/icons-home.eot?v4.01#iefix') format('embedded-opentype'),
-         url('/media/fonts/icons-home.woff?v4.01') format('woff'),
-         url('/media/fonts/icons-home.ttf?v4.01') format('truetype');
+    src: url('/media/fonts/icons-home.eot?12-2014#iefix') format('embedded-opentype'),
+         url('/media/fonts/icons-home.woff?12-2014') format('woff'),
+         url('/media/fonts/icons-home.ttf?12-2014') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -1232,6 +1232,7 @@ html[lang|="en"] {
         padding: 15px 30px;
         min-width: 220px;
         text-transform: uppercase;
+        text-shadow: none;
         font-weight: bold;
         .font-size(@largeFontSize);
         cursor: pointer;
